--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,3 @@
-@import "/css/componentes.css";
-@import "/css/roleta.css";
-@import "/css/popup.css";
+@import "componentes.css";
+@import "roleta.css";
+@import "popup.css";
