--- a/css/roleta.css
+++ b/css/roleta.css
@@ -98,11 +98,15 @@
   color: #ff1a23;
 }
 @media (max-width: 450px) {
+  .logo {
+    margin-top: 8px;
+  }
   .h1-texto h1 {
     font-size: 1.25rem;
   }
   .h1-texto h2 {
     font-size: 1.75rem;
+    margin-bottom: 20px;
   }
   .roleta {
     max-width: 360px;
