--- a/css/roleta.css
+++ b/css/roleta.css
@@ -99,7 +99,7 @@
 }
 @media (max-width: 450px) {
   .logo {
-    margin-top: 8px;
+    max-width: 240px;
   }
   .h1-texto h1 {
     font-size: 1.25rem;
