--- a/css/componentes.css
+++ b/css/componentes.css
@@ -17,6 +17,7 @@ body {
   background-image: url("../img/bg.webp");
   background-position: top center;
   background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Saira", sans-serif;
   min-height: 100vh;
 }
