--- a/css/popup.css
+++ b/css/popup.css
@@ -5,31 +5,35 @@
   width: 100vw;
   background-color: black;
   z-index: 2000;
-  background: rgba(0, 0, 0, 0.65);
+  background: rgba(0, 0, 0, 0.75);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(9px);
-  -webkit-backdrop-filter: blur(9px);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
   border: 1px solid rgba(0, 0, 0, 0.15);
   display: none;
   justify-content: center;
 }
 
-.popup h1 {
-  text-align: center;
-  color: #ededed;
-  text-transform: uppercase;
-  max-width: 560px;
-  font-size: 1.5rem;
-  margin: 0 auto 20px auto;
+.popup-text img {
+  max-width: 360px;
+  border-radius: 10px;
 }
 
 .popup p {
   font-size: 1.25rem;
   text-align: center;
   color: #ededed;
+  max-width: 460px;
+}
+.popup h2 {
+  margin: 24px 0 12px 0;
 }
 
 .popup-text {
   margin: auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
