--- a/css/popup.css
+++ b/css/popup.css
@@ -1,7 +1,7 @@
 .popup {
   position: absolute;
   top: 0;
-  height: 100vh;
+  height: 120vh;
   width: 100vw;
   background-color: black;
   z-index: 2000;
@@ -28,6 +28,7 @@
 }
 .popup h2 {
   margin: 24px 0 12px 0;
+  font-size: 1.25rem;
 }
 
 .popup-text {
@@ -36,4 +37,20 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 12px;
+}
+
+@media (max-width: 450px) {
+  .popup-text img {
+    max-width: 320px;
+  }
+  .popup-text a {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .popup-text img {
+    max-width: 260px;
+  }
 }
