--- a/css/roleta.css
+++ b/css/roleta.css
@@ -17,7 +17,7 @@
 .warning p {
   margin: 0 auto 20px auto;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 600;
   color: #ededed;
 }
@@ -77,7 +77,7 @@
   justify-content: center;
   position: relative;
   gap: 60px;
-  margin: 40px auto;
+  margin: 24px auto 32px auto;
 }
 
 .steps-box li {
@@ -92,28 +92,28 @@
 .steps-box::after {
   content: "";
   position: absolute;
-  width: 360px;
+  width: 370px;
   height: 12px;
   display: block;
   background-color: #ededed;
-  top: 25%;
-  left: 32%;
+  top: 16%;
+  left: 34%;
   z-index: -1000;
 }
 .steps {
   background-color: #ededed;
   display: block;
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  font-size: 2rem;
+  width: 40px;
+  height: 40px;
+  font-size: 1.5rem;
   font-weight: 600;
   line-height: inherit;
   text-align: center;
 }
 
 .steps-text {
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 600;
   color: #ededed;
   max-width: 10ch;
@@ -182,19 +182,16 @@
   rotate: 3240deg;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1024px) {
   .steps-box::after {
-    width: 370px;
-    top: 25%;
-    left: 32%;
+    left: 31%;
   }
 }
 
 @media (max-width: 800px) {
   .steps-box::after {
     width: 390px;
-    top: 25%;
-    left: 22%;
+    left: 23%;
   }
 }
 @media (max-width: 450px) {
@@ -209,19 +206,12 @@
     font-size: 1.75rem;
     margin-bottom: 20px;
   } */
-  .steps {
-    width: 50px;
-    height: 50px;
-    font-size: 1.5rem;
-    line-height: 2em;
-  }
   .steps-box {
     gap: 24px;
     margin: 20px auto;
   }
   .steps-box::after {
     width: 280px;
-    top: 20%;
     left: 12%;
   }
   .steps-box li {
@@ -256,10 +246,40 @@
   }
 }
 
+@media (max-width: 360px) {
+  .steps-box::after {
+    left: 10%;
+  }
+}
 @media (max-width: 320px) {
+  .logo {
+    padding: 24px 0;
+  }
+  .h1-texto h1 {
+    font-size: 1.25rem;
+  }
+  .roleta {
+    max-width: 260px;
+  }
+  .steps-box {
+    gap: 10px;
+  }
   .steps-box::after {
     width: 220px;
-    top: 20%;
-    left: 8%;
+  }
+  .steps-text {
+    font-size: 1rem;
+  }
+  .roleta-img-container::before {
+    right: 42%;
+    width: 42px;
+    height: 42px;
+  }
+  .roleta-img-container::after {
+    right: 43%;
+  }
+  .roleta-container button {
+    margin-top: 12px;
+    font-size: 1rem;
   }
 }
